--- a/src/encapsulate/package.json
+++ b/src/encapsulate/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "encapsulation",
+  "name": "encapsulate",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "James Curran (@dzejms @minusminusmusic)",
+  "homepage": "https://minusminusmusic.com/experiments/encapsulate",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
